# heisenbug-2019

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.cfg
heisenbug/: algorithm.py  constants.py  flask_app.py  missing_assert.py  opensource_disl_case.ipynb  simple.py
html/: index.html
html/heisenbug/: simple.py.html
tests/: test_algorithm.py  test_constants.py  test_flask.py  test_missing_assert.py  test_simple.py
